✨ ui facelift
semver: minor
